--- a/scRNAseq/0_学习SingleCellExperiment对象.Rmd
+++ b/scRNAseq/0_学习SingleCellExperiment对象.Rmd
@@ -16,14 +16,13 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ![](./mdFigures/SingleCellExperiment.png)
 
-安装方法
-
-```{r SingleCellExperiment}
+#### 安装方法
+```{r, echo=FALSE}
 #BiocManager::install("SingleCellExperiment")
 library(SingleCellExperiment)
 ```
 
-## 2-存储基本的SC-RNAseq实验数据
+#### 存储基本的SC-RNAseq实验数据
 
 首先模拟构建一个SC-RNAseq的Count表达矩阵, 每行是基因，每列为Cell样本
 
@@ -42,7 +41,7 @@ sce <- SingleCellExperiment(assays = list(counts = counts_matrix))
 sce
 ```
 
-使用操作函数, 提取添加 `SingleCellExperiment` 对象中的数据
+#### 使用操作函数, 提取添加 `SingleCellExperiment` 对象中的数据
 
 ```{r}
 ## assay第二个参数指定 "counts" 就可以提取 sce 对象中的 count矩阵
@@ -56,13 +55,76 @@ assay(sce, "counts")
 ## 标准化后的sce直接覆盖赋值给原来的sce
 #sce <- scater::logNormCounts(sce)
 ## 新的sce会包含两个 assays, 一个是counts 另一个是logcounts
-sce
-
+#sce
 ## 我们可以直接使用 logcounts(sce) 或者 assay(sce,"logcounts") 提取标准化后的表达矩阵
-
 #head(logcounts(sce))
 #assay(sce,"logcounts")
 
+## 手动添加 assay
+counts_100 <- counts(sce)+100
+assay(sce,"counts_100") <- counts_100
+assays(sce)
+
 ```
+
+#### 添加metadata
+metadata包括我们的细胞系,处理条件, 批次等信息; 这些都可以添加到sce对象中; SingleCellExperiment对象存储此类信息的slot有 `colData` (细胞系信息), `rowData/rowRanges` (feature的metadata)和 `metadata`
+
+
+```{r}
+cell_metadata <- data.frame(batch = c(1, 1, 2))
+rownames(cell_metadata) <- paste0("cell_", 1:3)
+sce <- SingleCellExperiment(assays = list(counts = counts_matrix),colData = cell_metadata)
+sce
+```
+
+## 2- SCE类对象在单细胞领域特有slot
+
+#### reducedDims 存储单细胞数据的降维结果
+`reducedDims` 是个list,可以存储多个降维结果
+
+```{r}
+assay(sce,"logcounts") <- scater::normalizeCounts(assay(sce,"counts"),size_factors=librarySizeFactors(assay(sce,"counts")))
+
+## PCA
+sce <- scater::runPCA(sce)
+reducedDim(sce, "PCA")
+
+## t-SNE
+sce <- scater::runTSNE(sce, perplexity = 0.1)
+
+## 查看有哪些降维数据存储进去了
+reducedDims(sce)
+```
+
+上面用scater的函数得到的结果会自动添加到sce中reducedDims的slot数据; 我们也可以手动添加数据到 reducedDims
+
+```{r}
+u <- uwot::umap(t(logcounts(sce)), n_neighbors = 2)
+reducedDim(sce, "UMAP_uwot") <- u
+reducedDims(sce) # Now stored in the object.
+reducedDim(sce, "UMAP_uwot") 
+```
+
+
+
+## Quick start
+
+使用droplet-based数据集(来自scRNAseq包)展示一个快速处理SC数据的示例
+
+```{r}
+library(scRNAseq)
+#sce <- MacoskoRetinaData()
+
+## 1-质量控制
+#library(scater)
+#is.mito <- grepl("^MT-",rownames(sce))
+#qcstats <- perCellQCMetrics(sce, subsets=list(Mito=is.mito))
+#filtered <- quickPerCellQC(qcstats, percent_subsets="subsets_Mito_percent")
+#sce <- sce[,!filtered$discard]
+
+```
+
+
 
 
